feat(main) add files lab-03

--- a/labs/lab03/report/Л03_ЮГАЙ_ОТЧЕТ..md
+++ b/labs/lab03/report/Л03_ЮГАЙ_ОТЧЕТ..md
@@ -94,23 +94,30 @@ header-includes:
 
 ![Компиляция шаблона](image/Снимок экрана от 2023-10-14 00-05-25.png)
 
-При успешной компиляции должны сгенерироваться файлы report.pdf и report.docx.
+</p>Благодаря команде make, файл формата md преобразился в файлы формата pdf и docx
+
+</p>При успешной компиляции должны сгенерироваться файлы report.pdf и report.docx.
 Откройте и проверьте корректность полученных файлов.
 
 ![Проверка правильности](image/Снимок экрана от 2023-10-14 00-06-11.png)
 
-Удалите полученный файлы с использованием Makefile. Для этого введите команду
+
+</p>Удалите полученный файлы с использованием Makefile. Для этого введите команду
 
 ![Удаление файлов](image/Снимок экрана от 2023-10-14 00-05-49.png)
 
-Откройте файл report.md c помощью любого текстового редактора, например gedit
+</p>С помощью команды make clean, мы удаляем все полученные файлы
+
+</p>Откройте файл report.md c помощью любого текстового редактора, например gedit
 
 ![Открытие файла](image/Снимок экрана от 2023-10-14 00-39-31.png)
 
 Заполните отчет и скомпилируйте отчет с использованием Makefile. Проверьте кор-
 ректность полученных файлов.
 
-![Проверка компиляции](image/Снимок экрана от 2023-10-14 00-39-31.png)
+![Проверка компиляции](image/Снимок экрана от 2023-10-14 00-06-11.png)
+
+</p>Используя команду ls, я проверил корректность полученных файлов
 
 Загрузите файлы на Github
 
